--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,15 @@
         <!--ADDED-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
@@ -65,6 +74,10 @@
             <version>3.19.0</version>
             <scope>test</scope>
         </dependency>
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>-->
     </dependencies>
 
     <build>
@@ -100,6 +113,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <environmentVariables>
+                        <!-- Default config for vanilla install of a local postgresql -->
+                        <SPRING_DATASOURCE_URL>jdbc:postgresql://localhost:5432/onehoey</SPRING_DATASOURCE_URL>
+                        <SPRING_DATASOURCE_USERNAME>neptune</SPRING_DATASOURCE_USERNAME>
+                        <SPRING_DATASOURCE_PASSWORD></SPRING_DATASOURCE_PASSWORD>
+                        <SPRING_JPA_HIBERNATE_DDL_AUTO>create-drop</SPRING_JPA_HIBERNATE_DDL_AUTO>
+                        <SPRING_JPA_DATABASE>POSTGRESQL</SPRING_JPA_DATABASE>
+                    </environmentVariables>
+                </configuration>
             </plugin>
         </plugins>
     </build>
