--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/onehoey
-spring.datasource.username=neptune
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_one_hoey_man
+spring.datasource.username=one_hoey_root
+spring.datasource.password=hoeyhoey
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
