--- a/pom.xml
+++ b/pom.xml
@@ -116,10 +116,10 @@
                 <configuration>
                     <environmentVariables>
                         <!-- Default config for vanilla install of a local postgresql -->
-                        <SPRING_DATASOURCE_URL>jdbc:postgresql://localhost:5432/onehoey</SPRING_DATASOURCE_URL>
-                        <SPRING_DATASOURCE_USERNAME>neptune</SPRING_DATASOURCE_USERNAME>
-                        <SPRING_DATASOURCE_PASSWORD></SPRING_DATASOURCE_PASSWORD>
-                        <SPRING_JPA_HIBERNATE_DDL_AUTO>create-drop</SPRING_JPA_HIBERNATE_DDL_AUTO>
+                        <SPRING_DATASOURCE_URL>jdbc:postgresql://localhost:5432/db_one_hoey_man</SPRING_DATASOURCE_URL>
+                        <SPRING_DATASOURCE_USERNAME>one_hoey_root</SPRING_DATASOURCE_USERNAME>
+                        <SPRING_DATASOURCE_PASSWORD>hoeyhoey</SPRING_DATASOURCE_PASSWORD>
+                        <SPRING_JPA_HIBERNATE_DDL_AUTO>update</SPRING_JPA_HIBERNATE_DDL_AUTO>
                         <SPRING_JPA_DATABASE>POSTGRESQL</SPRING_JPA_DATABASE>
                     </environmentVariables>
                 </configuration>
