--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ management.health.db.enabled=true
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
