--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ logging.level.org.springframework=ERROR
 
 spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_one_hoey_man
+#spring.datasource.username=one_hoey_root
+#spring.datasource.password=hoeyhoey
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port=8000
