--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
                 <artifactId>jackson-core</artifactId>
                 <version>2.12.2</version>
             </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.9.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
