--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,5 @@ spring.datasource.platform=postgres
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.servlet.multipart.enabled=true
 
